# ai-digest

./: .env.example  .gitignore  ACCEPTANCE.md  AI_DIGEST_WIKI.md  API_CONTRACT.md  CONTENT_GOALS.md  INTERFACES.md  LICENSE  Makefile  README.md  VALIDATION.md
backend/: .dockerignore  Dockerfile  fly.toml  profile.yaml  pyproject.toml  requirements.txt
backend/aidigest/: __init__.py  config.py  models.py
backend/aidigest/api/: main.py  schemas.py  security.py
backend/aidigest/db/: _rows.py  migrate.py  repo.py  schema.sql
backend/scripts/: _common.py  eval_gate.py  ingest.py  migrate.py  preview_daily.py  recall_eval.py  replay_day.py  run_daily.py  run_nightly.py  run_weekly.py  smoke.py  smoke_live.py  tune_tiers.py  wiki.py
backend/tests/: conftest.py  test_api.py  test_breakthrough_reachability.py  test_contract.py  test_curate.py  test_daily_pipeline.py  test_db_rows.py  test_dedup.py  test_deliver.py  test_eval_gate.py  test_flows_timing.py  test_gemini_client.py  test_generate_daily.py  test_generate_shared.py  test_generate_weekly.py  test_grounding.py  test_importance.py  test_ingest_feed_sources.py  test_ingest_json_sources.py  test_ingest_reddit_oauth.py  test_ingest_registry.py  test_ingest_util.py  test_judge.py  test_models.py  test_obs.py  test_persistence.py  test_personalize.py  test_pipeline.py  test_process_pipeline.py  test_promptfoo_provider.py  test_rank.py  test_reader.py  test_recall.py  test_render.py  test_render_markdown.py  test_robustness.py  test_security.py  test_telegram_webhook.py  test_weekly_pipeline.py  test_wiki.py
(+103 files in other folders)
