[project]
name = "aidigest"
version = "0.1.0"
description = "A self-hosted, single-user, LLM-powered personal AI-news engine."
requires-python = ">=3.13"
readme = "../README.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["aidigest*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
disallow_untyped_defs = false
warn_unused_ignores = false
